WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58241
Shouldn't carry out autocorrection when start typing a new word
https://bugs.webkit.org/show_bug.cgi?id=58241
Summary
Shouldn't carry out autocorrection when start typing a new word
Jia Pu
Reported
2011-04-11 09:27:41 PDT
Assuming user had typed "this ", then he moved insert point to between "s" and " ", added " mesage", then moved insertion point back to the end of phrase. At this point, we have "this mesage ". Now if the user inserts another non-whitespace character or newline, the word "mesage" will be autocorrected to "message". This is not consistent with AppKit TextView, which apply autocorrection only at the exit of a word. <
rdar://problem/9264736
>
Attachments
Patch (v1)
(92.12 KB, patch)
2011-04-11 09:36 PDT
,
Jia Pu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jia Pu
Comment 1
2011-04-11 09:36:05 PDT
Created
attachment 89016
[details]
Patch (v1)
WebKit Commit Bot
Comment 2
2011-04-11 13:53:19 PDT
The commit-queue encountered the following flaky tests while processing
attachment 89016
[details]
: http/tests/websocket/tests/handshake-fail-by-maxlength.html
bug 53816
The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2011-04-11 13:56:53 PDT
Comment on
attachment 89016
[details]
Patch (v1) Clearing flags on attachment: 89016 Committed
r83492
: <
http://trac.webkit.org/changeset/83492
>
WebKit Commit Bot
Comment 4
2011-04-11 13:56:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug